fix(dungeon): Make boss symbol visible on light themes (#1511)

--- a/src/styles/themes.less
+++ b/src/styles/themes.less
@@ -1,5 +1,11 @@
 // Any changes needed for specific bootswatch themes should be put in here
 
+.cerulean, .cosmo, .flatly, .journal, .litera, .lumen, .lux, .materia, .minty, .pulse, .sandstone, .simplex, .spacelab, .sketchy, .united, .yeti {
+    img[src="assets/images/dungeons/boss.svg"] {
+        filter: invert(1) brightness(90%);
+    }
+}
+
 .cyborg {
   .text-light {
     color: whitesmoke !important;
@@ -19,7 +25,6 @@
     filter: invert(1) brightness(90%);
   }
 }
-
 .sketchy {
   // Fix double close button
   #toaster .toast-body, .text-light {
